# livebook

./: .dockerignore  .editorconfig  .formatter.exs  .gitattributes  .gitignore  .livemd  .tool-versions  2023-05-25.md  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  SECURITY.md  anthropic.livemd  explore.json  find_duplicate_slugs.exs  find_duplicate_slugs.sh  mix.exs  package-lock.json  test.md  versions
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/build-dockerfile/: devcontainer.json
.devcontainer/dev/: .devcontainer.json  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/develop-livebook/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/elixir-phoenix-node-postgres/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/run-edge/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
app_builder/: README.md  mix.exs
app_bundler/: .gitignore  README.md  mix.exs
assets/: build.js  package-lock.json  package.json  postcss.config.js  postcss.config.mjs  tailwind.config.js  vite.config.js  webpack.config.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  runtime.exs  test.exs
defs/: messages.proto
docker/: build_and_push.sh
docs/: authentication.md  cluster_notebook.md  dev_endpoints.md  runtime.md  stamping.md  use_cases.md
elixirkit/: .gitignore  Makefile  README.md  mix.exs
elixirkit_next/: .gitignore  README.md  mix.exs
elixirkit_next/examples/tauri_project/src-tauri/: .gitignore  App.entitlements  Cargo.toml  build.rs  tauri.conf.json
elixirkit_next/examples/tauri_project/src-tauri/src/: lib.rs  main.rs
example_notebooks/: welcome.livemd
iframe/: .formatter.exs  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
ios_app/: .gitignore  Cartfile  Cartfile.resolved  Livebook-Bridging-Header.h  README.md  native-lib.cpp  native-lib.hpp  run_mix
lib/: litebook_cli.ex  live_book.ex  live_book_web.ex  livebook.ex  livebook_app.ex  livebook_cli.ex  livebook_web.ex
proto/: .formatter.exs  .gitignore  README.md  messages.proto  mix.exs
rel/: vm.args.eex
rel/app_next/src-tauri/: .gitignore  App.entitlements  Cargo.toml  build.rs  tauri.conf.json
rel/app_next/src-tauri/capabilities/: default.json
rel/app_next/src-tauri/icons/: icon.icns
rel/app_next/src-tauri/src/: lib.rs  main.rs
snap/: snapcraft.yaml
space/: README.md
static/: manifest.webmanifest  sw.js
test/: README.md  livebook_test.exs  setup_enterprise.exs  test_helper.exs
(+2333 files in other folders)
