[package]
name = "livebook"
version = "0.19.0-dev"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "livebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
elixirkit = { path = "../../../elixirkit_next/elixirkit_rs" }
serde_json = "1"
url = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
tao = "0.34"

[patch.crates-io]
# TODO: upstream
tao = { git = "https://github.com/wojtekmach/tao.git", branch = "wm-bundled-activation-policy" }
