[package]
name = "example"
version = "0.1.0"
edition = "2024"

[lib]
name = "example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
elixirkit = { path = "../../../elixirkit_rs" }
